--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
   },
   "homepage": "https://github.com/yaoshining/ebp-report-designer",
   "devDependencies": {
+    "@types/angular": "^1.5.20",
+    "@types/core-js": "^0.9.34",
+    "@types/echarts": "0.0.5",
+    "@types/lodash": "^4.14.39",
+    "@types/node": "^6.0.48",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-es2015-modules-amd": "^6.5.0",
@@ -50,8 +55,8 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.6",
-    "gulp-webpack": "^1.5.0",
     "http-proxy-middleware": "^0.9.1",
+    "install": "^0.8.2",
     "jasmine-core": "^2.4.1",
     "jshint": "^2.8.0",
     "jshint-loader": "^0.8.3",
@@ -63,7 +68,10 @@
     "lodash": "^3.10.1",
     "phantomjs-prebuilt": "^2.1.4",
     "through2": "^2.0.1",
+    "ts-loader": "^1.3.3",
+    "typescript": "^2.0.10",
     "uglify-save-license": "^0.4.1",
+    "webpack-stream": "^3.2.0",
     "wiredep": "^3.0.0-beta"
   },
   "dependencies": {}
