--- a/bower.json
+++ b/bower.json
@@ -43,8 +43,8 @@
     "angular-sanitize": "~1.3.x",
     "angular-resource": "~1.3.x",
     "lodash": "~3.8.0",
-    "ebp-ui": "*",
-    "angular-yao-utils": "*",
+    "ebp-ui": "master",
+    "angular-yao-utils": "master",
     "echarts": "^3.3.1"
   },
   "overrides": {
